--- a/_sass/_layouts/_layouts.sass
+++ b/_sass/_layouts/_layouts.sass
@@ -12,6 +12,7 @@
   background-size: cover
   background-repeat: no-repeat
   background-position: center
+  z-index: -2
 
 @mixin colored-background-overlay($color)
   background-color: $color
@@ -22,7 +23,7 @@
   left: 0
   width: 100%
   height: 100%
-  z-index: 0
+  z-index: -1
 
 @mixin colored-background-image-overlay($color, $path)
   @include colored-background-image($path)
